--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+button {
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contianer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.left {
+  border: 1px red solid;
+  margin: 20px;
+  height: 90vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right {
+  border: 1px blue solid;
+  margin: 20px;
+  width: 100%;
+  height: 90vh;
+}
+
+.messages {
+  height: 95%;
+  overflow: auto;
+}
+
+.input-from input{
+  width: 90%;
+  height: 35px;
+  border: 1px lightblue solid;
+}
+
+.input-from button {
+  width: 9%;
+  height: 40px;
+  border: none;
 }
