--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,50 @@ button {
   height: 40px;
   border: none;
 }
+
+
+.home-main-container{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.home-title {
+  font-size: 2.3em;
+}
+
+.home-btn-container{
+  height: 20vh;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.home-btn{
+  margin: 5px;
+  width: 150px;
+  height: 35px;
+  border: 1px solid black; 
+  border-radius: 5px;
+  background-color: #4361ee;
+  transition: 0.3s ease;
+
+}
+
+.home-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.4);
+  background: #4361ee;
+  opacity: 100%;
+}
+
+@media screen and (min-width: 734px){
+  .home-btn-container{
+    flex-direction: row;
+  }
+}
