--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,38 @@ button {
   overflow: auto;
 }
 
+.from-contianer {
+  /* border: 1px solid red;  */
+  height: 100vh;
+  width: 100vw;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+fieldset {
+  border: none;
+}
+
+.form-submit {
+  margin: 5px;
+  width: 150px;
+  height: 35px;
+  border: 1px solid black; 
+  border-radius: 5px;
+  background-color: #4361ee;
+  transition: 0.3s ease;
+}
+
 .input-from input{
   width: 90%;
   height: 35px;
@@ -69,7 +101,6 @@ button {
   border-radius: 5px;
   background-color: #4361ee;
   transition: 0.3s ease;
-
 }
 
 .home-btn:hover {
