--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ ul {
   border: 1px red solid;
   margin: 20px;
   height: 90vh;
+  text-align: center;
 }
 
 .right {
@@ -202,6 +203,22 @@ fieldset {
   background-color: #6f79a8;
   opacity: 40%;
   border: solid 1px black;
+}
+
+.group-btn-container{
+  float: left;
+  width: 100%;
+  padding: 0%;
+}
+
+.group-btn-cont{
+}
+
+.group-btn {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-bottom: 1px black solid;
 }
 
 @media screen and (min-width: 734px){
