--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ ul {
   margin: 20px;
   height: 90vh;
   text-align: center;
+  overflow: auto;
 }
 
 .right {
@@ -32,7 +33,6 @@ ul {
 }
 
 .from-contianer {
-  /* border: 1px solid red;  */
   height: 100vh;
   width: 100vw;
   display: flex; 
@@ -211,8 +211,6 @@ fieldset {
   padding: 0%;
 }
 
-.group-btn-cont{
-}
 
 .group-btn {
   width: 100%;
@@ -220,6 +218,14 @@ fieldset {
   border: none;
   border-bottom: 1px black solid;
 }
+
+.group-btn:first-of-type {
+  border-top: 1px black solid;
+}
+
+/* .group-btn:last-of-type{
+
+} */
 
 @media screen and (min-width: 734px){
   .home-btn-container{
