--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,10 @@ ul {
 
 .right {
   border: 1px blue solid;
-  margin: 20px;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
+  margin-top: 15px;
+  overflow: auto;
 }
 
 .messages {
@@ -64,17 +65,36 @@ fieldset {
 }
 
 .input-from input{
-  width: 90%;
+  width: 70%;
   height: 35px;
   border: 1px lightblue solid;
 }
 
 .input-from button {
-  width: 9%;
+  width: 10%;
   height: 40px;
   border: none;
+  margin-right: 5px;
 }
 
+.input-from {
+  border: 1px solid purple; 
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  padding: 5px;
+}
+
+.from-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .home-main-container{
   height: 100vh;
@@ -223,9 +243,19 @@ fieldset {
   border-top: 1px black solid;
 }
 
-/* .group-btn:last-of-type{
+.message-panel-bottom {
+ border: 1px blue solid; 
+ bottom: 0%;
+}
 
-} */
+.wrapper {
+  border: 1px solid pink;
+  height: 95vh;
+  width: 90%;
+  padding: 10px;
+  display: grid;
+  margin-right: 10px;
+}
 
 @media screen and (min-width: 734px){
   .home-btn-container{
