--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ ul {
 }
 
 .left {
-  border: 1px red solid;
+  border: 1px black solid;
   margin: 20px;
   height: 90vh;
   text-align: center;
@@ -21,7 +21,7 @@ ul {
 }
 
 .right {
-  border: 1px blue solid;
+  border: 1px black solid;
   width: 100%;
   height: 80vh;
   margin-top: 15px;
@@ -70,7 +70,7 @@ fieldset {
 .input-from input{
   width: 70%;
   height: 35px;
-  border: 1px lightblue solid;
+  border: 1px black solid;
 }
 
 .input-from button {
@@ -81,7 +81,7 @@ fieldset {
 }
 
 .input-from {
-  border: 1px solid purple; 
+  border: 1px solid black; 
   height: 80%;
   width: 100%;
   display: flex;
@@ -252,7 +252,6 @@ fieldset {
 }
 
 .wrapper {
-  border: 1px solid pink;
   height: 95vh;
   width: 90%;
   padding: 10px;
